<resources>
    <string name="app_name">7MinutesWorkOut</string>
    <string name="image">Image</string>
    <string name="start">START</string>
    <string name="get_ready_for_workout">GET READY FOR WORKOUT</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="todo">TODO</string>
    <string name="upcoming_exercise">UpComing Exercise</string>
    <string name="end">END</string>
    <string name="finish">FINISH</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="you_have_completed_the_workout">You Have Completed The Workout</string>
    <string name="congratulations">Congratulations!</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">Weight (in Kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">Weight (in pounds)</string>
    <string name="history">History</string>
    <string name="calender">Calender</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
</resources>