<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/mainScreenPadding">

    <ImageView
        android:id="@+id/flimg"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main_page"
        app:layout_constraintBottom_toTopOf="@+id/flstart"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:layout_editor_absoluteX="5dp" />


    <FrameLayout
        android:id="@+id/flstart"
        android:background="@drawable/itemripplebackground"
        app:layout_constraintTop_toBottomOf="@+id/flimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBmi"
        android:background="@drawable/itemripplebackground"
        app:layout_constraintBottom_toTopOf="@id/tvbmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        android:layout_width="80dp"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tvbmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calculator"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        android:layout_marginBottom="20dp"/>

    <FrameLayout
        android:id="@+id/flHistory"
        android:background="@drawable/itemripplebackground"
        app:layout_constraintBottom_toTopOf="@id/tvbmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flBmi"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="80dp"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src= "@drawable/ic_calendar"
            android:layout_gravity="center"
            android:contentDescription="@string/calender" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
           app:layout_constraintStart_toEndOf="@+id/flBmi"
        android:text="@string/history"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>