<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbarExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:background="@color/white"
        app:titleTextColor="@color/colorPrimary"
        >

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for_workout"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/RestView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

   <FrameLayout
        android:id="@+id/RestView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/itembordercircular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:rotation="-90"
            android:max="10"
            android:progress="100"
            android:indeterminate="false"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_accent_background"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="10"
                />

        </LinearLayout>


   </FrameLayout>

    <TextView
        android:id="@+id/tvUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RestView"
        android:text="@string/upcoming_exercise"
        android:textSize="15sp"
        android:layout_marginTop="15sp"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUp"
        android:text="@string/upcoming_exercise"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_jumping_jacks"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:id="@+id/tvExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/exercise_name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/flExerciseView"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        />

    <FrameLayout
        android:id="@+id/flExerciseView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@drawable/itembordercircular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ProgressBar
            android:id="@+id/pbExercise"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:rotation="-90"
            android:max="30"
            android:progress="300"
            android:indeterminate="false"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_accent_background"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimerExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="30"
            />
        </LinearLayout>
    </FrameLayout>
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExerciseStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >




        </androidx.recyclerview.widget.RecyclerView>
    
</androidx.constraintlayout.widget.ConstraintLayout>